--- a/ffmpeg/ffserver/Dockerfile
+++ b/ffmpeg/ffserver/Dockerfile
@@ -1,4 +1,4 @@
-FROM        soldiersolutions/ffmpeg-base:latest
+FROM        soldiersolutions/ffmpeg:latest
 MAINTAINER  Todd J. Lehn <lehn.todd@gmail.com>
 
 ENTRYPOINT  ["/usr/local/bin/ffserver"]
