serverless: Update base image to use craftsource/awsenv instead of craftsource/awscli

--- a/awsenv/Dockerfile
+++ b/awsenv/Dockerfile
@@ -19,16 +19,9 @@
 # LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
-FROM craftsource/awscli
+FROM craftsource/awsenv:latest
 
 LABEL maintainer="lehn.todd@gmail.com"
-
-# Specifies an AWS access key associated with an IAM user or role, the secret
-# key associated with the access key and the ARN of the AWS IAM role to assume.
-ENV AWS_ACCESS_KEY_ID="" \
-    AWS_SECRET_ACCESS_KEY="" \
-    AWS_SESSION_TOKEN="" \
-    AWS_ROLE_ARN=""
 
 # Copy the sts script into the image.
 COPY sts.bash /usr/local/bin/sts.bash
