--- a/android/Dockerfile
+++ b/android/Dockerfile
@@ -34,12 +34,12 @@ ENV PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/tools/bin:${ANDROID_HOME}
 # the SDK and build tools with the Android SDK manager and cleanup once the install is complete.
 RUN dpkg --add-architecture i386 && \
     apt-get update -qq && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y -qq \
     libc6:i386 libstdc++6:i386 libgcc1:i386 libncurses5:i386 libz1:i386 \
     openjdk-8-jdk wget unzip bash openssl && \
     apt-get clean && \
     cd /opt && \
-    wget https://dl.google.com/android/repository/${SDK_TOOLS_DIST} -O android-sdk-tools.zip && \
+    wget -q https://dl.google.com/android/repository/${SDK_TOOLS_DIST} -O android-sdk-tools.zip && \
     cd /root && \
     mkdir .android && \
     cd .android && \
@@ -47,8 +47,8 @@ RUN dpkg --add-architecture i386 && \
     cd /opt && \
     unzip -q android-sdk-tools.zip -d ${ANDROID_HOME} && \
     rm -f android-sdk-tools.zip && \
-    yes | sdkmanager --verbose --licenses && \
-    sdkmanager --verbose --update && \
+    yes | sdkmanager --licenses && \
+    sdkmanager --update && \
     sdkmanager "build-tools;19.1.0" \
     "build-tools;20.0.0" \
     "build-tools;21.1.2" \
