--- a/android/Dockerfile
+++ b/android/Dockerfile
@@ -36,7 +36,7 @@ RUN dpkg --add-architecture i386 && \
     apt-get update -qq && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y -qq \
     libc6:i386 libstdc++6:i386 libgcc1:i386 libncurses5:i386 libz1:i386 \
-    openjdk-8-jdk wget unzip bash openssl && \
+    openjdk-8-jdk wget unzip bash openssl < /dev/null > /dev/null && \
     apt-get clean && \
     cd /opt && \
     wget -q https://dl.google.com/android/repository/${SDK_TOOLS_DIST} -O android-sdk-tools.zip && \
@@ -47,7 +47,7 @@ RUN dpkg --add-architecture i386 && \
     cd /opt && \
     unzip -q android-sdk-tools.zip -d ${ANDROID_HOME} && \
     rm -f android-sdk-tools.zip && \
-    yes | sdkmanager --licenses && \
+    yes | sdkmanager --licenses > /dev/null && \
     sdkmanager --update && \
     sdkmanager "build-tools;19.1.0" \
     "build-tools;20.0.0" \
